src/assets/App.css
/* ... */
    #exploreInput {
    	color: #dddddd;
    	background-color: #0f131c;
    	border: 1px solid #dddddd;
    	height: 35px;
    	width: 80%;
    	letter-spacing: 6px;
    	font-size: 120%;
    	padding: auto;
    	font-family: 'Alegreya Sans', sans-serif;
    	text-align: center;
    }
    #submitExplore {
    	display: none;
    }
    #searchElements {
    	margin: 2px 15px 5px 5px;
    	padding: 5px;
    }
    #searchUnit {
    	border: 1px solid #00dcff;
    	border-width: 1px 0px 0px 0px;
    }
    #searchTitle {
    	padding: 0px 5px 0px 5px;
    	font-size: 115%;
    	color: #00dcff;
    }
    #searchSummary {
    	font-family: 'Alegreya Sans', sans-serf;
    	padding: 0px 5px 5px 5px;
    	font-size: 90%;
    }
    #moreSearchButton {
    	margin: auto;
    	text-align: center;
    	font-size: 150%;
    	padding: 5px;
    	color: #00ffdc;
    	border: 1px solid #00dcff;
    	border-width: 1px 0px 0px 0px;
    }
    #moreSearchButton:hover {
    	color: #0f131c;
    	background-color: #00ffdc;
      cursor: pointer;
    }

/*End SearchBox*/



/*SubProblemUnit and SolutionUnit*/

#solutionUnit {
  padding: 5px;
  padding-left: 0px;
  margin: 2px;
  margin-left: 0px;
  padding-bottom: 0px;
  margin-bottom: 0px;
  border: 2px solid #00dcff;
  border-width: 1px 0px 0px 0px;
  border-radius: 0px;
  padding: 10px;
  padding-left: 3px;
  padding-bottom: 0px;
}
#subProblemUnit:hover, #solutionUnit:hover {
  cursor: pointer;
  box-shadow: 0 0 2pt 2pt rgba(0,220,255,0.5);
}
#subProblemUnit:hover #subProblemSummary, #solutionUnit:hover #solutionUnitSummary {
  color: #ffffff;
}
#percent {
  float: left;
  color: #00dcff;
  font-size: 200%;
  padding: 0px 0px 0px 0px;
  margin: 5px 10px 0px 5px;
  height: auto;
  text-align: left;
  color: #00dcff;
  font-family: 'Raleway', sans-serif;
  text-align: center;
}
#subProblemUnitTitle {
  display: block;
  margin: 0px;
  padding: 2px 5px 2px 5px;
  font-size: 130%;
  color: #00dcff;
  line-height: 120%;
  height: auto;
  width: 75%;
}
#solutionUnitTitle {
  display: inline-block;
  text-align: left;
  padding: 0px;
  margin: 0px;
  color: #dddddd;
  margin-bottom: 0px;
  margin-left: 0px;
  letter-spacing: 1px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  font-family: 'Alegreya Sans';
  padding-top: 10px;
  flex: 2 2 auto;
}
#problemVote {
  flex: 1 1 auto;
  color: #00ffdc;
  background-color: #0f131c;
  border: 1px solid #00ffdc;
  border-radius: 2px;
  cursor: pointer;
  padding-left: 15px;
  padding-right: 15px;
  margin-left: 5px;
  font-size: 125%;
  float: right;
}
#problemVote:hover {
  color: #0f131c;
  background-color: #00ffdc;
  cursor: pointer;
}
#problemVote:active {
  color: #00ffdc;
  background-color: #0f131c;
}
#subProblemSummary, #solutionUnitSummary {
  color: #dddddd;
  clear: both;
  border: 1px solid #dddddd;
  border-width: 0px 0px 0px 0px;
  text-align: justify;
  padding: 8px 2px;
  margin-bottom: 0px;
  margin-top: 0px;
  font-family: 'Alegreya Sans';
}

/*End SubProblemUnit*/



/*Suggestions*/

    #sidebarElements {
      border: 1px solid #00dcff;
      border-width: 0px 1px;
      padding-left: 10px;
      padding-right: 10px;
    }
    #suggestionProblem fieldset {
      border: 1px solid #00dcff;
    }
    #suggestionProblem legend {
      padding: 0.2em 0.5em;
      border: 1px solid #00dcff;
      font-size: 90%;
      text-align: justify;
    }
    #suggestionUnit {
      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;
      flex-direction: row;
      font-family: 'Alegreya Sans';
      padding-top: 10px;
    }
    #suggestionContent {
      flex: 3 3 auto;
      font-family: 'Alegreya Sans';
      border: 1px solid #00ffdc;
      border-width: 1px 0px 0px 0px;
      width: 80%;
      padding: 10px;
    }
    #suggestionAdder {
      font-size: 90%;
      color: #00ffdc;
    }
    #suggestionText {
      font-family: 'Alegreya Sans';
      margin-top: 5px;
    }
    #suggestionVote {
      flex: 1 1 auto;
      color: #00ffdc;
      background-color: #0f131c;
      border: 1px solid #00ffdc;
      border-radius: 2px;
      cursor: pointer;
    }
    #suggestionVote:hover {
      color: #0f131c;
      background-color: #00ffdc;
      cursor: pointer;
    }
    #suggestionVote:active {
      color: #00ffdc;
      background-color: #0f131c;
    }

/*End Suggestion*/



/*Welcome*/

    #welcomeBox {
    	margin: 4% 20% 4% 20%;
    	border: 1px solid #dddddd;
      border-radius: 3px;
      /*box-shadow: 0 0 1pt 1pt rgba(255,255,255,0.5);*/
    }
    #welcomePrompt {
    	color: #dddddd;
      margin: 5px 0px 5px 0px;
    	font-size: 180%;
      letter-spacing: 6px;
      cursor: default;
    }
    #selectProblemPrompt{
    	padding: 5px 5px 0px 5px;
    	font-size: 130%;
    	border: 1px solid #00dcff;
    	border-width: 1px 0px 0px 0px;
    	text-align: center;
    	color: #00dcff;
    }
    #exploreWelcomeForm{
    	overflow: hidden;
    	padding: 5px 0px 5px 0px;
    	margin: 0px;
    	text-align: center;
    	color: #dddddd;
    	letter-spacing: 8px;
    	font-size: 100%;
    	padding-top: 10px;
    	}
    #exploreInput {
    	color: #dddddd;
    	background-color: #0f131c;
    	border: 1px solid #dddddd;
    	height: 35px;
    	width: 80%;
    	letter-spacing: 6px;
    	font-size: 120%;
    	padding: auto;
    	font-family: 'Alegreya Sans SC', sans-serif;
    	text-align: center;
    }
    #submitExplore {
    	display: none;
    }
    #welcomeUnitsContainer {
    	margin: 2px 15px 5px 5px;
    	padding: 5px;
    }
    #welcomeUnitsContainer ul li {
      display: inline;
    }
/* ... */

